--- a/src/less/base/_variables.less
+++ b/src/less/base/_variables.less
@@ -1,8 +1,9 @@
 /* base color */
+
 @black: #000;
 
 //color for line-gradient
-@color-1:  #019795;
+@color-1: #019795;
 @color-2: #86A138;
 @color-3: #D5D53F;
 @color-4: #EAC133;
@@ -12,9 +13,11 @@
 @color-8: #A44B8D;
 @color-9: #C9C9E3;
 @color-10: #0073B2;
-@color-11:#A6C9E7;
+@color-11: #A6C9E7;
+
 
 /* color for button text */
+
 @btn-text-buy-click: #58595B;
 
 //color for buttom background
@@ -22,20 +25,20 @@
 @btn-red: #D65B8E;
 @btn-blue: #0073AF;
 @btn-store: #B5B5CC;
-@btn-green:#60B6A8;
+@btn-green: #60B6A8;
 
 //color for button background hover, focus, active
 @btn-cart-hover: #EF8C22;
+@btn-cart-active: #EF8C22;
 @btn-store-hover: #C9C9E3;
 
 //-color for text
-@text:#333333;
+@text: #333333;
 @text-green: #60B6A8;
 @text-red: #DF2439;
-@text-grey: #4E4E4E;  // текст для "Войти", "Зарегистрироватья", и цена товаров в корзине
-
- //-color for background
-@body-bg:#DBDBDB;
+@text-grey: #4E4E4E; // текст для "Войти", "Зарегистрироватья", и цена товаров в корзине
+//-color for background
+@body-bg: #DBDBDB;
 @white: #fff;
 @blue: #004AAA;
 @redlight: #F4344F;
@@ -43,19 +46,19 @@
 @red: #DC1019;
 
 //color for goods
-@coral:  #FF7979;
-@seagreen:#6BAC89;
+@coral: #FF7979;
+@seagreen: #6BAC89;
 @violet: #C3499E;
-@gold:   #FFB047;
+@gold: #FFB047;
 @darkblue: #002D76;
-@brown:  #AF674F;
+@brown: #AF674F;
 
 // Вертикальный шаг
-@l1:8px;
-@l2:@l1*2;
-@l3:@l1*4;
-@l4:@l1*7;
-@l5:@l1*10;
+@l1: 8px;
+@l2: @l1*2;
+@l3: @l1*4;
+@l4: @l1*7;
+@l5: @l1*10;
 
 // Точки перелома
 @mobile: ~"(min-width: 360px)";
