--- a/src/pug/pages/ui/typhography.pug
+++ b/src/pug/pages/ui/typhography.pug
@@ -12,31 +12,29 @@ block content
 				.title Типографика
 				p Вся типографика и стилизация по тегам работает внутри класса <code>.user-content</code> 
 				p Цвета, записанные в переменные
-				div(style="display:inline-block;width:30px; height:30px;background-color:#222222") 
-				div(style="display:inline-block;width:30px; height:30px;background-color:#383737")
-				div(style="display:inline-block;width:30px; height:30px;background-color:#037ec6")
+				div(style="display:inline-block;width:30px; height:30px;background-color:#60B6A8") 
+				div(style="display:inline-block;width:30px; height:30px;background-color:#58595B")
 				br
 				br
 				pre.
-					@title: #222222;
-					@text: #383737;
-					@active: #037ec6; 
+					@title: #60B6A8;
+					@text-card: #58595B;
 				br
 				p Заголовки
 				.section-ui
-					h1 Заголовок 1
-					h2 Заголовок 2
-					h3 Заголовок 3
-					h4 Заголовок 4
-					h5 Заголовок 5
-					h6 Заголовок 6
+					.title-1 Каталог товаров
+					.title-2 Хиты продаж
+					.title-3 Посмотреть все аксессуары
+					.title-4 Заголовок 4
+					.title-5 Заголовок 5
+					.title-6 Заголовок 6
 				pre.
-					h1 Заголовок 1
-					h2 Заголовок 2
-					h3 Заголовок 3
-					h4 Заголовок 4
-					h5 Заголовок 5
-					h6 Заголовок 6
+					.title-1 Заголовок 1
+					.title-2 Заголовок 2
+					.title-3 Заголовок 3
+					.title-4 Заголовок 4
+					.title-5 Заголовок 5
+					.title-6 Заголовок 6
 
 				br
 				br
