--- a/src/less/blocks/_titles.less
+++ b/src/less/blocks/_titles.less
@@ -1,13 +1,61 @@
 .title-1, .title-2, .title-3, .title-4, .title-5, .title-6, .title {
-	line-height: 1.3;
+	line-height: 1;
 	margin: 1.0em 0 1.0em;
 }
 
-.title-1 { font-size: 28px; font-weight: 900; }
-.title-2 { font-size: 26px; font-weight: 600; }
-.title-3 { font-size: 24px; font-weight: 900; }
+.title-1 { 
+	font-size: 24px; 
+	font-weight: 500;
+	.mixin-margin(bottom,@l2);
+	.mixin-margin(top,@l2);
+	color: @title;
+	text-transform: uppercase;
+}
+@media @desktop {
+	.title-1 {
+		font-size: 28px;
+	}
+}
+@media @desktopXL {
+	.title-1 {
+		font-size: 32px;
+	}
+}
+
+.title-2 { 
+	font-size: 24px; 
+	font-weight: 300; 
+	.mixin-margin(bottom,@l2);
+	.mixin-margin(top,@l3);
+	color: @title;
+}
+@media @desktop {
+	.title-2 {
+		font-size: 24px;
+	}
+} 
+
+.title-3 { 
+	font-size: 18px; 
+	.mixin-margin(bottom,@l3);
+	.mixin-margin(top,@l2);
+	color: @title;
+}
+@media @desktop {
+	.title-3 {
+		font-size: 22px;
+	}
+}
+@media @desktopXL {
+	.title-3 {
+		font-size: 28px;
+	}
+}
+
 .title-4 { font-size: 20px; font-weight: 900; }
+
 .title-5 { font-size: 18px; font-weight: 900; }
+
 .title-6 { font-size: 16px; font-weight: 900; }
 
 .title { font-size: 32px; }
