--- a/src/less/sections/_header-search.less
+++ b/src/less/sections/_header-search.less
@@ -6,8 +6,13 @@
 		width: 784px;
 	}
 }
+@media @desktop {
+	.header-search-section {
+		width: 100%;
+	}
+}
 .header-search {
-	box-shadow: 0px 2px 6px -2px rgba(0, 0, 0, 0.8);
+	box-shadow: 0px 3px 6px -4px rgba(0, 0, 0, 0.8);
 	position: relative;
 	margin-bottom: 16px;
 }
@@ -19,6 +24,7 @@
 	font-size: 18px;
 	padding: 16px 22px;
 	color: @text-light-grey;
+	width: 100%;
 }
 .header-search__close {
 	position: absolute;
@@ -31,12 +37,23 @@
 		left: 749px;
 	}
 }
+@media @desktop {
+	.header-search__close {
+		left: 100%;
+		margin-left: -34px;
+	}
+}
 .header-search__result {
 	display: flex;
 	align-items: center;
 	padding-left: 22px;
 	padding-right: 22px;
 	margin-bottom: 8px;
+}
+@media @desktop {
+	.header-search-result-mobile {
+		display: none;
+	}
 }
 .header-search__result-img {	
 	margin-right: 21px;
@@ -50,4 +67,89 @@
 	line-height: 1;
 	font-size: 16px;
 	color: @text-light-grey;
+}
+.devide {
+	display: none;
+}
+@media @tablet {
+	.devide {
+		display: none;
+	}
+}
+@media @desktop {
+	.devide {
+		display: block;
+		width: 100%;
+		.line-gradient;
+		margin-bottom: 16px;
+	}
+}
+.header-search-result {
+	display: flex;
+	margin-left: 24px;
+	margin-right: 24px;
+}
+.header-search-result__category, .header-search-result__goods {
+	display: flex;
+	-webkit-flex-direction: column;
+		    -ms-flex-direction: column;
+		        flex-direction: column;	
+}
+.header-search-result__goods {
+	margin-left: 35px;
+}
+.header-search-result-desktop {
+	display: flex;
+	-webkit-justify-content: space-between;
+	justify-content: space-between;
+}
+@media @mobile {
+	.header-search-result-desktop {
+		display: none;
+	}
+}
+@media @tablet {
+	.header-search-result-desktop {
+		display: none;
+	}
+}
+@media @desktop {
+	.header-search-result-desktop {
+		display: flex;
+		-webkit-justify-content: space-between;
+		justify-content: space-between;
+	}
+}
+.header-search-result__link {
+	margin-bottom: 12px;
+}
+.header-search-result__link-item {
+	line-height: normal;
+	font-size: 16px;
+	letter-spacing: 0.05em;
+	color: @text-light-grey;
+	&:hover, &:focus {
+		color: @text-red;
+		text-decoration: none;
+	}
+	&:active {
+		text-decoration: none;
+		border-bottom: 1px solid @text-red;
+		color: @text-red;
+		padding-bottom: 5px;
+	}
+	&--active {
+		border-bottom: 1px solid @text-red;
+		color: @text-red;
+		padding-bottom: 5px;
+	}
+}
+.header-search-result-img {
+	width: 200px;
+}
+.header-search-result-desktop {
+	display: none;
+}
+.header-search-result-mobile {
+	display: none;
 }
