--- a/src/less/blocks/_card-product.less
+++ b/src/less/blocks/_card-product.less
@@ -25,7 +25,7 @@
 	position: absolute;
 	top: 16px;
 	right: 16px;
-	color: @lightgrey;
+	color: #e1e1e1;
 	transition: color 1s;
 	
 }
@@ -47,12 +47,12 @@
 		height: 196px;}
 }
 
-.card-product__img:hover img {
+/* .card-product__img:hover img {
 	@media @desktop {
 	display: none;}
-}
+} */
 .card-product__text {
-	color:@darkgrey;
+	color:@text-card;
 	font-size: 11px;
 	line-height: 12px;	
 	height: 64px;
@@ -72,7 +72,7 @@
 	}
 }
 .card-product__price{
-	color:@darkgrey;
+	color:@text-card;
 	font-size: 16px;
 	font-weight: 600;
 	margin-bottom: 8px;
@@ -111,6 +111,7 @@
 	
 }
 .price-old{
+	font-weight: 300;
 	display: inline-block;
 	position: relative;
 }
@@ -120,7 +121,7 @@
 	height: 1px;
 	background-color: #000;
 	position: absolute;
-	top: 49%;
+	top: 42%;
 	left: -9%;
 }
 
@@ -135,6 +136,7 @@
 	width: 16px;
 	height: 16px;
 	border-radius: 50%;
+	margin-top: 16px;
 
 }
 .card-product--colorscheme{
