--- a/src/pug/pages/ui/cards-colorscheme.pug
+++ b/src/pug/pages/ui/cards-colorscheme.pug
@@ -14,19 +14,31 @@ block content
 			.row
 				.col-6.col-md-3
 					+card-with-colors( 'goods/purse-brown-hover.png', 'goods/purse_yellow.png', 'purse yellow', 'Сумка большая, коллекция "Рига"', '4 863 р')
+						+button-cart('В корзину','#')
+						+colors-product('#FF7979', '#6BAC89', '#C3499E', '#FFB047', '#002D76', '#AF674F')
 				.col-6.col-md-3
 					+card-with-colors(  'goods/purse-brown-hover.png', 'goods/purse_green.png', 'purse green', 'Кошелек для монет N/S|Морской пейзаж', '4 863 р')
+						+button-store('Нет в наличии','#')
+						+colors-product('#FF7979', '#6BAC89', '#C3499E', '#FFB047', '#002D76', '#AF674F')
 				.col-6.col-md-3
 					+card-sale-with-colors( '- 40%','goods/purse-brown-hover.png', 'goods/purse_brown.png', 'purse brown', 'Портмоне тройного сложения с внешним карманом для монет на молнии, с ручкой', '4 863 р', '4 863 р' )
+						+button-cart('В корзину','#')
+						+colors-product('#FF7979', '#6BAC89', '#C3499E', '#FFB047', '#002D76', '#AF674F')
 				.col-6.col-md-3
 					+card-sale-with-colors( '- 40%','goods/purse-brown-hover.png', 'goods/purse_brown.png', 'purse brown', 'Портмоне тройного сложения с внешним карманом для монет на молнии, с ручкой', '4 863 р', '4 863 р' )
+						+button-store('Нет в наличии','#')
+						+colors-product('#FF7979', '#6BAC89', '#C3499E', '#FFB047', '#002D76', '#AF674F')
 
 		.title-4 код для обычной карточки		
 		pre.
 			.col-6.col-md-3
 				+card-with-colors( 'goods/purse-brown-hover.png', 'goods/purse_yellow.png', 'purse yellow', 'Сумка большая, коллекция "Рига"', '4 863 р')
+					+button-cart('В корзину','#')
+					+colors-product('#FF7979', '#6BAC89', '#C3499E', '#FFB047', '#002D76', '#AF674F')
 
 		.title-4 код для карточки со скидкой		
 		pre.
 			.col-6.col-md-3
 				+card-sale-with-colors( '- 40%','goods/purse-brown-hover.png', 'goods/purse_brown.png', 'purse brown', 'Портмоне тройного сложения с внешним карманом для монет на молнии, с ручкой', '4 863 р', '4 863 р' )
+					+button-store('Нет в наличии','#')
+					+colors-product('#FF7979', '#6BAC89', '#C3499E', '#FFB047', '#002D76', '#AF674F')
