--- a/src/pug/pages/ui/cards.pug
+++ b/src/pug/pages/ui/cards.pug
@@ -14,18 +14,24 @@ block content
 			.row
 				.col-6.col-md-3
 					+card( 'goods/purse-brown-hover.png', 'goods/purse_yellow.png', 'purse yellow', 'Сумка большая, коллекция "Рига"', '4 863 р')
+						+button-store('Нет в наличии','#')
 				.col-6.col-md-3
 					+card(  'goods/purse-brown-hover.png', 'goods/purse_green.png', 'purse green', 'Кошелек для монет N/S|Морской пейзаж', '4 863 р')
+						+button-cart('В корзину','#')
 				.col-6.col-md-3
 					+card--sale( '- 40%','goods/purse-brown-hover.png', 'goods/purse_brown.png', 'purse brown', 'Портмоне тройного сложения с внешним карманом для монет на молнии, с ручкой', '4 863 р', '4 863 р' )
+						+button-store('Нет в наличии','#')
 				.col-6.col-md-3
 					+card--sale( '- 40%','goods/purse-brown-hover.png', 'goods/purse_brown.png', 'purse brown', 'Портмоне тройного сложения с внешним карманом для монет на молнии, с ручкой', '4 863 р', '4 863 р' )
+						+button-cart('В корзину','#')
 		.title-2 Карточка обычная					
 		pre.
 			.col-6.col-md-3
-				+card( 'goods/purse-brown-hover.png','goods/purse_yellow.png', 'purse yellow', 'Сумка большая, коллекция "Рига"', '4 863 р')
+				+card( 'goods/purse-brown-hover.png', 'goods/purse_yellow.png', 'purse yellow', 'Сумка большая, коллекция "Рига"', '4 863 р')
+					+button-store('Нет в наличии','#')
 
 		.title-2 Карточка со скидкой
 		pre.
 			.col-6.col-md-3
 				+card--sale( '- 40%', 'purse-brown-hover.png', 'goods/purse_yellow.png', 'purse yellow', 'Сумка большая, коллекция "Рига"', '4 863 р', '4 863 р' )
+					+button-cart('В корзину','#')
