footer-navigation is done

--- a/src/less/main.less
+++ b/src/less/main.less
@@ -18,6 +18,8 @@
 @import "sections/_ui-nav-panel"; // Left panel in documentation
 @import "sections/_footer";
 @import "sections/_header";
+@import "sections/_footer-navigation";
+
 
 // Pages
 // Utils - Always Last - !IMPORTANT
