--- a/src/pug/sections/ui-navigation.pug
+++ b/src/pug/sections/ui-navigation.pug
@@ -41,7 +41,7 @@
 			+linkLeftPanel("Шапка - Поиск", "#")
 			+linkLeftPanel("Шапка - Все вместе", "#")
 
-			+linkLeftPanel("Подвал - Навигация", "#")
+			+linkLeftPanel("Подвал - Навигация", "footer-navigation.html")
 			+linkLeftPanel("Подвал - Форма подписки", "#")
 			+linkLeftPanel("Подвал - Социальные сети", "#")
 			+linkLeftPanel("Подвал - Общий, все вместе", "#")
