--- a/src/pug/mixins/_section-card.pug
+++ b/src/pug/mixins/_section-card.pug
@@ -2,7 +2,7 @@ mixin card-product-text(cardColor, cardTitle, cardText )
 	.card-description.card-description--color(style="background-color:"+ cardColor)
 		.card-description__title #{cardTitle}
 		.card-description__text  #{cardText}
-		button(type="submit") BUTTON
+		+button-detail('Подробнее','#')
 
 mixin card-product-img(bgColor, imgSrc, imgHeight )
 	.card-description.card-description--img(style="background:"+ bgColor+" url('../img/"+imgSrc+"') center no-repeat; background-size: cover; height: "+imgHeight)
