--- a/src/pug/pages/ui/section-card.pug
+++ b/src/pug/pages/ui/section-card.pug
@@ -10,20 +10,21 @@ block content
 		.row
 			.col-md-6.col-xl-4
 				+card-product-text('#004AAA;', 'Кошелек', 'Ожидайте яркий взрыв в вашей сумке с женскими кошельками mywalit: кожа лучшего качества, элегантные дизайны и уникальные детали для уникального продукта, который вы можете наслаждаться каждый день!'  )
-			.col-md-6.col-xl-4
-				+card-product-text('#DC1019;', 'Кошелек', 'Ожидайте яркий взрыв в вашей сумке с женскими кошельками mywalit: кожа лучшего качества, элегантные дизайны и уникальные детали для уникального продукта, который вы можете наслаждаться каждый день!'  )
-			.col-md-6.col-xl-4
-				+card-product-text('#61B39B;', 'Кошелек', 'Ожидайте яркий взрыв в вашей сумке с женскими кошельками mywalit: кожа лучшего качества, элегантные дизайны и уникальные детали для уникального продукта, который вы можете наслаждаться каждый день!'  )
+				+card-product-img('#004AAA', 'bg/blue-purse.jpg', '286px;')
+			
 		.title-4 добавить карточку с описанием 
 		pre.
 			.col-md-6.col-xl-4
 				+card-product-text('#004AAA;', 'Кошелек', 'Ожидайте яркий взрыв в вашей сумке с женскими кошельками mywalit: кожа лучшего качества, элегантные дизайны и уникальные детали для уникального продукта, который вы можете наслаждаться каждый день!'  )
+				+card-product-img('#004AAA', 'bg/blue-purse-tab.jpg', '340px;')
 		.title-4 миксин для карточки с описание
 		pre.
 			mixin card-product-text(cardColor, cardTitle, cardText )
 				.card-description.card-description--color(style="background-color:"+ cardColor)
 					.card-description__title #{cardTitle}
 					.card-description__text  #{cardText}
-					button(type="submit") BUTTON
+					+button-detail('Подробнее','#')
+			mixin card-product-img(bgColor, imgSrc, imgHeight )
+				.card-description.card-description--img(style="background:"+ bgColor+" url('../img/"+imgSrc+"') center no-repeat; background-size: cover; height: "+imgHeight)
 
 		
