--- a/src/pug/pages/ui/header-nav.pug
+++ b/src/pug/pages/ui/header-nav.pug
@@ -8,7 +8,7 @@ block content
 		br
 		h1 Шапка - выпадающее меню
 
-		nav.header-nav
+		nav.header-nav.d-block
 
 			ul#menu-level-1.menu-level-1
 				li
