--- a/src/pug/pages/ui/header-top.pug
+++ b/src/pug/pages/ui/header-top.pug
@@ -12,25 +12,25 @@ block content
 			.header-info
 				.container
 					.row.justify-content-between.align-items-center
-						.col-lg-4.col-xl-4.d-flex
+						.col-6.col-lg-4.d-flex
 							+header-info__item("../../img/icons/marker.svg", "Санкт-Петербург")
-						.col-lg-4.col-xl-4.d-none.d-lg-flex
+						.col-lg-4.d-none.d-lg-flex
 							+header-info__item("../../img/icons/car.svg", "Доставка по всей России")(class="mr-20")
 							+header-info__item("../../img/icons/warranty.svg", "Гарантия 1 год")
-						.col-lg-4.col-xl-4.d-flex.justify-content-end
+						.col-6.col-lg-4.d-flex.justify-content-end
 							+header-info__item("../../img/icons/phone.svg", "+7 (495) 132-62-60")
-							.header-info__block.d-none.d-md-inline-block.ml-10 +7 (800) 222-63-30
+							.header-info__block.d-none.d-md-block.ml-10 +7 (800) 222-63-30
 
 			.header-menu
 				.container
 					.logo
 					.row
-						.col-6.col-md-6.d-lg-none.d-flex
+						.col-6.d-flex.d-lg-none
 							.menu-block#toggle-menu
 								img(src="../../img/icons/gamburger.svg" alt="иконка")
 							.menu-block
 								img(src="../../img/icons/search.svg" alt="иконка")
-						.col-6.col-md-6.col-lg-6.col-xl-6.d-flex.justify-content-end
+						.col-6.d-flex.justify-content-end
 							.menu-block.user-registration
 								img(src="../../img/icons/profile.svg" alt="иконка")
 								.user-registration__text
