--- a/src/pug/mixins/_cards.pug
+++ b/src/pug/mixins/_cards.pug
@@ -1,53 +1,24 @@
 //-миксин для обычной карточки
 mixin card( imgHover, imgSrc, imgAlt, cardText, cardPrice)
 	if block
-		.card-product
+		.card-product&attributes(attributes)
 			a.card-heart-icon(href="#")
 				i.fas.fa-heart
 			.card-product__img
-				img.product-img(src="../img/"+ imgSrc data= "../img/"+ imgSrc data-hover="../img/"+ imgHover alt =''+ imgAlt )
-			.card-product__text #{cardText}			
-			.card-product__price #{cardPrice}			
-			block
-
-//-миксин для карточки со скидкой
-mixin card--sale(prosent,imgHover, imgSrc, imgAlt, cardText, priceOld, priceNew)
-	if block
-		.card-product 
-			.card-label-sale #{prosent}
-			a.card-heart-icon(href="#")
-				i.fas.fa-heart
-			.card-product__img
-				img.product-img(src="../img/"+ imgSrc data= "../img/"+ imgSrc data-hover="../img/"+ imgHover alt =''+ imgAlt )
-			.card-product__text.
-				#{cardText}
-			.card-product__price.card__price--sale
-				span.price-new #{priceOld}
-				span.price-old #{priceNew}
-			block
-
-//-миксин для обычной карточки с цветовой схемой товаров
-mixin card-with-colors( imgHover, imgSrc, imgAlt, cardText, cardPrice)
-	if block
-		.card-product.card-product--colorscheme
-			a.card-heart-icon(href="#")
-				i.fas.fa-heart
-			.card-product__img
-				img.product-img(src="../img/"+ imgSrc data= "../img/"+ imgSrc data-hover="../img/"+ imgHover alt =''+ imgAlt )
-			.card-product__text.
-				#{cardText}
+				img.product-img(src="../img/"+ imgSrc data-src= "../img/"+ imgSrc data-hover="../img/"+ imgHover alt =''+ imgAlt )
+			.card-product__text #{cardText}
 			.card-product__price #{cardPrice}
 			block
-			
-//-миксин для карточки со скидкой и цветовой схемой
-mixin card-sale-with-colors(prosent,imgHover, imgSrc, imgAlt, cardText, priceOld, priceNew)
+
+
+mixin card--sale(prosent,imgHover, imgSrc, imgAlt, cardText, priceOld, priceNew)
 	if block
-		.card-product.card-product--colorscheme
+		.card-product&attributes(attributes)
 			.card-label-sale #{prosent}
 			a.card-heart-icon(href="#")
 				i.fas.fa-heart
 			.card-product__img
-				img.product-img(src="../img/"+ imgSrc data= "../img/"+ imgSrc data-hover="../img/"+ imgHover alt =''+ imgAlt )
+				img.product-img(src="../img/"+ imgSrc data-src= "../img/"+ imgSrc data-hover="../img/"+ imgHover alt =''+ imgAlt )
 			.card-product__text.
 				#{cardText}
 			.card-product__price.card__price--sale
