--- a/src/less/blocks/_sales-hits.less
+++ b/src/less/blocks/_sales-hits.less
@@ -2,14 +2,9 @@
 	width: 100%;
 	background-color: @white;
 	text-align: center;
-	.mixin-margin(bottom,@l2);
+	.mixin-margin(bottom,@l2);	
+	
 }
-.sales-hits__title{
-	color: @text-green;
-	.mixin-margin(bottom,@l2);
-	font-weight: 300;
-	font-size: 24px;
-	@media @desktop {
-		font-size: 28px;
-	}
-}
+.sales-hits__title{	.mixin-margin(bottom,@l2);}
+
+	
