--- a/src/pug/sections/header-top.pug
+++ b/src/pug/sections/header-top.pug
@@ -30,4 +30,4 @@
 					.menu-block.cart
 						.cart__image
 							img(src="../../img/icons/cart-color.svg" alt="иконка")
-						.cart__amount 5850р.
+						.cart__amount.menu-icon 5850р.
