--- a/src/pug/pages/ui/header-nav.pug
+++ b/src/pug/pages/ui/header-nav.pug
@@ -14,13 +14,13 @@ block content
 				li
 					a(href="#!") Все аксеcсуары
 				li
-					a(href="#!").text-salad.menu-icon-open Новая коллекция
+					a(href="#!").text-salad.menu-icon Новая коллекция
 				li
-					a(href="#!").menu-icon-open Для женщин
+					a(href="#!").menu-icon Для женщин
 					
 					ul#menu-level-2.menu-level-2
 						li
-							a(href="#!").menu-icon-open Все сумки
+							a(href="#!").menu-icon Все сумки
 							.line-gradient--menu
 							ul#menu-level-3.menu-level-3
 								li
@@ -34,7 +34,7 @@ block content
 								li
 									a(href="#!") Рюкзаки
 						li
-							a(href="#!").menu-icon-open Все кошельки
+							a(href="#!").menu-icon Все кошельки
 							.line-gradient--menu
 							ul#menu-level-3.menu-level-3
 								li
@@ -46,7 +46,7 @@ block content
 								li
 									a(href="#!") Кошельки на круговой молнии
 						li
-							a(href="#!").menu-icon-open Аксессуары
+							a(href="#!").menu-icon Аксессуары
 							.line-gradient--menu
 							ul#menu-level-3.menu-level-3
 								li
@@ -64,11 +64,11 @@ block content
 								li
 									a(href="#!") Перчатки		
 				li
-					a(href="#!").menu-icon-open Для мужчин
+					a(href="#!").menu-icon Для мужчин
 						//- span.menu-icon-open
 					ul#menu-level-2.menu-level-2
 						li 
-							a(href="#!").menu-icon-open Офис и Тревел
+							a(href="#!").menu-icon Офис и Тревел
 							.line-gradient--menu
 							ul#menu-level-3.menu-level-3
 								li
