--- a/src/pug/sections/header-nav.pug
+++ b/src/pug/sections/header-nav.pug
@@ -7,13 +7,13 @@ nav.header-nav
 		li
 			a(href="#!") Все аксеcсуары
 		li
-			a(href="#!").text-salad.menu-icon-open Новая коллекция
+			a(href="#!").text-salad.menu-icon Новая коллекция
 		li
-			a(href="#!").menu-icon-open Для женщин
+			a(href="#!").menu-icon Для женщин
 			
 			ul#menu-level-2.menu-level-2
 				li
-					a(href="#!").menu-icon-open Все сумки
+					a(href="#!").menu-icon Все сумки
 					.line-gradient--menu
 					ul#menu-level-3.menu-level-3
 						li
@@ -27,7 +27,7 @@ nav.header-nav
 						li
 							a(href="#!") Рюкзаки
 				li
-					a(href="#!").menu-icon-open Все кошельки
+					a(href="#!").menu-icon Все кошельки
 					.line-gradient--menu
 					ul#menu-level-3.menu-level-3
 						li
@@ -39,7 +39,7 @@ nav.header-nav
 						li
 							a(href="#!") Кошельки на круговой молнии
 				li
-					a(href="#!").menu-icon-open Аксессуары
+					a(href="#!").menu-icon Аксессуары
 					.line-gradient--menu
 					ul#menu-level-3.menu-level-3
 						li
@@ -57,11 +57,11 @@ nav.header-nav
 						li
 							a(href="#!") Перчатки		
 		li
-			a(href="#!").menu-icon-open Для мужчин
+			a(href="#!").menu-icon Для мужчин
 				//- span.menu-icon-open
 			ul#menu-level-2.menu-level-2
 				li 
-					a(href="#!").menu-icon-open Офис и Тревел
+					a(href="#!").menu-icon Офис и Тревел
 					.line-gradient--menu
 					ul#menu-level-3.menu-level-3
 						li
