--- a/src/pug/pages/ui/header-search.pug
+++ b/src/pug/pages/ui/header-search.pug
@@ -10,8 +10,8 @@ block content
 		.title Шапка поиск
 
 		.section-ui
-			.header-search-section
-				.header-search
+			.header-search-section.d-block
+				.header-search#header-search-section
 					input.header-search__input(type="text" placeholder="Поиск товара...")
 					.header-search__close
 						<svg width="12" height="12" viewBox="0 0 12 12" fill="none" xmlns="http://www.w3.org/2000/svg">
