--- a/src/pug/sections/header-top.pug
+++ b/src/pug/sections/header-top.pug
@@ -18,7 +18,7 @@
 				.col-6.d-flex.d-lg-none
 					.menu-block#toggle-menu
 						img(src="../../img/icons/gamburger.svg" alt="иконка")
-					.menu-block
+					.menu-block.toggle-search-block
 						img(src="../../img/icons/search.svg" alt="иконка")
 				.col-6.d-flex.justify-content-end
 					.menu-block.user-registration
