--- a/src/pug/sections/ui-navigation.pug
+++ b/src/pug/sections/ui-navigation.pug
@@ -37,14 +37,12 @@
 			+linkLeftPanel("Хиты продаж", "#")
 			+linkLeftPanel("Разделы каталога", "#")
 
-			+linkLeftPanel("Шапка - Выпадающее меню", "#")
 			+linkLeftPanel("Шапка - Поиск", "header-search.html")
 	
 			+linkLeftPanel("Шапка - верхняя часть", "header-top.html")
 			+linkLeftPanel("Шапка - Выпадающее меню", "header-nav.html")
-			+linkLeftPanel("Шапка - Поиск", "#")
-      
-			+linkLeftPanel("Шапка - Все вместе", "#")
+			      
+			+linkLeftPanel("Шапка - Все вместе", "header.html")
 
 			+linkLeftPanel("Подвал - Навигация", "#")
 			+linkLeftPanel("Подвал - Форма подписки", "#")
