--- a/src/pug/pages/main.pug
+++ b/src/pug/pages/main.pug
@@ -5,5 +5,8 @@ block variables
 	- var pageClass = 'index-page footer-bottom';
 
 block content
-	h1 Заготовка для Главной страницы
+	include ../sections/header-top.pug
+	include ../sections/header-nav.pug
+	.line-gradient
+	include ../sections/header-search.pug		
 	
