--- a/src/pug/pages/ui/header-top.pug
+++ b/src/pug/pages/ui/header-top.pug
@@ -32,7 +32,7 @@ block content
 						.col-6.d-flex.d-lg-none
 							.menu-block#toggle-menu
 								img(src="../../img/icons/gamburger.svg" alt="иконка")
-							.menu-block
+							.menu-block.toggle-search-block
 								img(src="../../img/icons/search.svg" alt="иконка")
 						.col-6.d-flex.justify-content-end
 							.menu-block.user-registration
@@ -45,6 +45,7 @@ block content
 								.cart__image
 									img(src="../../img/icons/cart-color.svg" alt="иконка")
 								.cart__amount.menu-icon 5850р.
-			include ../../sections/header-nav.pug
-			.line-gradient
+		include ../../sections/header-nav.pug
+		.line-gradient
+
 				
