--- a/src/less/blocks/_colors.less
+++ b/src/less/blocks/_colors.less
@@ -24,6 +24,11 @@
 	font-size: 16px;
 	font-weight: 700;
 }
+.colors-product-link{
+	display: block;
+	width: 16px;
+	height: 16px;
+}
 
 //-line-gradient
 .color-1 {background-color: @color-1;}
