--- a/src/pug/mixins/_mixins.pug
+++ b/src/pug/mixins/_mixins.pug
@@ -2,11 +2,17 @@
 mixin colors-product(color1, color2, color3, color4, color5, color6)
 	.colors-product
 		.colors-product__circle(style="background-color: "+ color1)
+			a.colors-product-link(href="#")
 		.colors-product__circle(style="background-color: "+ color2)
+			a.colors-product-link(href="#")
 		.colors-product__circle(style="background-color: "+ color3)
+			a.colors-product-link(href="#")
 		.colors-product__circle(style="background-color: "+ color4)
+			a.colors-product-link(href="#")
 		.colors-product__circle(style="background-color: "+ color5)
+			a.colors-product-link(href="#")
 		.colors-product__circle(style="background-color: "+ color6)
+			a.colors-product-link(href="#")
 
 //- Mixn for search result
 mixin searchResult (img, text)
