--- a/src/pug/sections/header-nav.pug
+++ b/src/pug/sections/header-nav.pug
@@ -1,9 +1,8 @@
 //- шапка навигация
 .container
-	.row
-		.col
-			nav.header-nav
-				ul#menu-level-1.menu-level-1
+	nav
+		.header-nav
+			ul#menu-level-1.menu-level-1
 					li
 						a(href="#!") Все аксеcсуары
 					li
@@ -72,7 +71,7 @@
 										a(href="#!") Тревел-органайзеры
 					li
 						a(href="#!").text-red Summer Sale
-		.col-auto.d-none.d-lg-flex
+		.search-block
 			.search-block__title.toggle-search-block ПОИСК
 			.search-block__icon.toggle-search-block 
 				img(src="../../img/icons/search.svg" alt="иконка")
