--- a/src/pug/sections/ui-navigation.pug
+++ b/src/pug/sections/ui-navigation.pug
@@ -27,9 +27,7 @@
 			+linkLeftPanel("Баннер с картинкой", "#")
 			+linkLeftPanel("Кнопки", "buttons.html")
 			+linkLeftPanel("Карточки товара", "cards.html")
-			+linkLeftPanel("Карточка раздела(описание) ", "section-card.html")
-			+linkLeftPanel("Карточка раздела(изображение)", "section-card-img.html")
-			+linkLeftPanel("Карточка раздела", "#")
+			+linkLeftPanel("Карточка раздела", "section-card.html")
 			+linkLeftPanel("Социальные сети", "ui-social.html")
 
 
