--- a/src/less/blocks/_section-card.less
+++ b/src/less/blocks/_section-card.less
@@ -12,7 +12,7 @@
 	display: flex;
 	flex-direction: column;
 	align-items: center;	
-	//margin-bottom: 16px;
+	font-weight: 300;
 	color: @white;
 	@media @tablet{
 		margin-bottom: 16px;
