--- a/src/less/blocks/_titles.less
+++ b/src/less/blocks/_titles.less
@@ -52,7 +52,13 @@
 	}
 }
 
-.title-4 { font-size: 20px; font-weight: 900; }
+.title-4 { 
+	line-height: 1.5;
+	font-size: 20px;
+	color: @text-card;
+	font-weight: 600;
+	text-align: center;
+}
 
 .title-5 { font-size: 18px; font-weight: 900; }
 
