--- a/src/less/main.less
+++ b/src/less/main.less
@@ -21,6 +21,8 @@
 @import "sections/_header-search";
 @import "sections/_header-nav";
 @import "sections/_header-top";
+@import "sections/_footer-subscribe";
+
 
 
 // Pages
