--- a/src/less/base/_variables.less
+++ b/src/less/base/_variables.less
@@ -3,8 +3,8 @@
 @color-line: #C4C4C4;
 
 /* base color */
-
 @black: #000;
+@active-checkbox: #58595B;
 
 //color for line-gradient
 @color-1: #019795;
