--- a/src/pug/sections/ui-navigation.pug
+++ b/src/pug/sections/ui-navigation.pug
@@ -18,6 +18,8 @@
 			+linkLeftPanel("Типографика", "typhography.html")
 			+linkLeftPanel("Сетка", "grid.html")
 			+linkLeftPanel("Вертикальный ритм", "vertical-grid.html")
+			+linkLeftPanel("Элементы формы", "forms.html")
+
 
 	.left-panel__section
 		p.strong Блоки
@@ -47,7 +49,7 @@
 			+linkLeftPanel("Шапка - Все вместе", "#")
 
 			+linkLeftPanel("Подвал - Навигация", "#")
-			+linkLeftPanel("Подвал - Форма подписки", "#")
+			+linkLeftPanel("Подвал - Форма подписки", "footer-subscribe.html")
 			+linkLeftPanel("Подвал - Социальные сети", "#")
 			+linkLeftPanel("Подвал - Общий, все вместе", "#")
 
