--- a/src/libs/bootstrap4-grid-customized/custom-grid.css
+++ b/src/libs/bootstrap4-grid-customized/custom-grid.css
@@ -24,9 +24,9 @@
   display: flex;
   -ms-flex-wrap: wrap;
   flex-wrap: wrap;
-  margin-right: -4px;
-  margin-left: -4px; }
-  @media (min-width: 360px) {
+/*  margin-right: -4px;
+  margin-left: -4px;*/ }
+/*  @media (min-width: 360px) {
     .row {
       margin-right: -4px;
        margin-left: -4px; } }
@@ -41,7 +41,7 @@
   @media (min-width: 1440px) {
     .row {
       margin-right: -12px;
-      margin-left: -12px;; } }
+      margin-left: -12px;; } }*/
 
 .no-gutters {
   margin-right: 0;
